# ownership

./: Cargo.toml  README.md
src/: test.rs
src/borrow/: 1.rs  2.rs  3.rs  4.rs
src/move/: 1.rs  2.rs
src/slice/: 1.rs
src/string/: 1.rs
